Move submission and claim IDs to URLs (#363)